fix: a11y color contrast issues with tiny on ImageCard component

--- a/ui-components/src/blocks/ImageCard.scss
+++ b/ui-components/src/blocks/ImageCard.scss
@@ -36,14 +36,29 @@
 }
 
 .image-card__overlay {
-  background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.95));
+  background: rgb(0, 0, 0);
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 0.9374124649859944) 0%,
+    rgba(0, 0, 0, 0.665703781512605) 80%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  @screen md {
+    background: rgb(0, 0, 0);
+    background: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.9374124649859944) 0%,
+      rgba(0, 0, 0, 0.665703781512605) 50%,
+      rgba(255, 255, 255, 0) 87%
+    );
+  }
   position: absolute;
   bottom: 0;
   left: 0;
   @apply w-full;
   height: 100%;
   @screen md {
-    height: 60%;
+    height: 100%;
   }
 }
 
